2016-XX-XX      XXXXXX  Implemented is_drama
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/pull/61);
                        Minor doco improvements, including some from the Debian project
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/60);
                        Minor coverage improvements by getting rid of some redundant
                          code paths;
                        Number::Phone::Country will now warn that exporting is deprecated;
                        Stubs and dial_to are no longer experimental;
                        More comprehensive testing of stubs, and resulting bug-fixes for
                          territories that appear as part of another's number plan, such
                          as enormous Kazakhstan and tiny Tristan da Cunha;

2016-09-07      3.2001  Data updates

2016-06-05      3.2000  Bump version number because rpm is stupid and thinks
                          3.1 < 3.0014;
                        Recognize Isle of Man (IM) free/special-rate
                          numbers;
                        Data updates

2016-03-04      3.1     Added the format_using() method and the ability to
                          use third-party formatters, thanks to Michael
                          Schout for the suggestion;
                        Data updates

2015-12-08      3.0014  Deprecated APIs of being able to call most methods as
                          class methods or functions instead of object methods
                          have now been deleted;
                        Remove unnecessary N::P::NANP->country method - the
                          implementation in the superclass is sufficient;
                        Data updates

2015-11-04      3.0013  Fix another bug in the tests which threw up
                          misleading failures if a country-specific subclass
                          was installed
