@@ -79,6 +79,7 @@ lib/Number/Phone/Formatter/Raw.pm
 lib/Number/Phone/Formatters.pod
 t/number-phone-country-warns-about-exports.t
 t/pod-coverage.t
+t/example-phone-numbers.t
 lib/Number/Phone/StubCountry/AC.pm
 lib/Number/Phone/StubCountry/AD.pm
 lib/Number/Phone/StubCountry/AE.pm
@@ -323,4 +324,3 @@ lib/Number/Phone/StubCountry/YT.pm
 lib/Number/Phone/StubCountry/ZA.pm
 lib/Number/Phone/StubCountry/ZM.pm
 lib/Number/Phone/StubCountry/ZW.pm
-t/example-phone-numbers.t
